--- a/config_hub/pretrain/debug.yaml
+++ b/config_hub/pretrain/debug.yaml
@@ -25,7 +25,7 @@ initial_checkpoint_dir:
 resume: false
 
 # Data-related arguments. If not provided, the default is ``litgpt.data.TinyLlama``.
-data: TinyStories
+data: litgpt.data.FineWebEdu
 
 # Training-related arguments. See ``litgpt.args.TrainArgs`` for details
 train:
@@ -88,15 +88,15 @@ eval:
 optimizer:
 
   class_path: torch.optim.AdamW
-  
+
   init_args:
-    
+
     #   (type: float, default: 0.001)
     lr: 6e-4
-    
+
     #   (type: float, default: 0.01)
     weight_decay: 0.1
-    
+
     #   (type: tuple, default: (0.9,0.999))
     betas:
       - 0.9
@@ -110,7 +110,7 @@ num_nodes: 1
 
 # Optional path to the tokenizer dir that was used for preprocessing the dataset. Only some data
 # module require this. (type: Optional[Path], default: null)
-tokenizer_dir: checkpoints/EleutherAI/pythia-14m
+tokenizer_dir: checkpoints/microsoft/Phi-3.5-mini-instruct
 
 # The name of the logger to send metrics to. (type: Literal['wandb', 'tensorboard', 'csv'], default: tensorboard)
 logger_name: tensorboard
